# VARAT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_annotation.py
data/Anno/Process1/sample/: sample.tex  sample.xlsx  sample_article.txt  sample_article_masked.html  sample_article_sentence.txt  sample_preprocessed.html
lib/: util.py  xmldoc_child.py
tools/: generate_dict_draft.py  generate_var_pair_table.py  preprocess.py
